styles and text adapted to scholar theme

--- a/angular-front/src/app/components/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/dashboard/dashboard.component.html
@@ -1,27 +1,22 @@
 <div id="dashboard-container" >
     <section id="dashboard" class="container">
-        <h1>📊 Estadísticas </h1>
-        <p>¡Bienvenido a nuestra página web de estadísticas de canciones!
-            Aquí podrás encontrar toda la información sobre tus artistas
-            y canciones favoritas, actualizada en tiempo real.
-            Desde el número de reproducciones en plataformas de streaming,
-            hasta las posiciones en las listas de éxitos, pasando por las
-            tendencias en las redes sociales.</p>
-            <button class="me-3 btn btn-success" type="button">
+        <div class="mb-5">
+            <h1>📊 Estadísticas </h1>
+            <p>
+                ¡Bienvenido a nuestra página web de estadísticas de canciones!
+                Aquí podrás encontrar toda la información sobre tus artistas
+                y canciones favoritas, actualizada en tiempo real.
+                Desde el número de reproducciones en plataformas de streaming,
+                hasta las posiciones en las listas de éxitos, pasando por las
+                tendencias en las redes sociales.
+            </p>
+            <button class="me-3 btn btn-primary" type="button">
                 Suscribirse
             </button>
-            <button type="button" class="btn btn-outline-info">
+            <button type="button" class="btn btn-outline-dark">
                 Ver más
             </button>
-            <div class="pt-5 pb-4">
-                <div id="most-listened-title">
-                    <img class="me-3" src="assets/spotify-icon.png" alt="Spotify Icon" width="30px" height="30px">
-                    <h4>Top 10 canciones en Spotify </h4>
-                </div>
-                <p>En nuestra página web encontrarás una lista actualizada diariamente con las canciones que están arrasando en las plataformas de streaming, con toda la información que necesitas saber sobre cada una de ellas: desde el número de reproducciones hasta las posiciones en las listas de éxitos. ¡No te lo pierdas!</p>
-            </div>
-            <app-table></app-table>
-        <hr class="mt-5">
-        <app-cards></app-cards>
+        </div>
+        <app-table></app-table>
     </section>
 </div>
