--- a/angular-front/src/app/components/toolbar/toolbar.component.html
+++ b/angular-front/src/app/components/toolbar/toolbar.component.html
@@ -1,24 +1,27 @@
-<nav id="toolbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav id="toolbar" class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">🎧 DoReMiData</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">
+      <app-icon></app-icon>
+      {{"\<Spanford University />"}}
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Novedades</a>
+          <a class="nav-link" href="#">Novedades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Estadísticas</a>
+          <a class="nav-link active" href="#">Estadísticas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Contacto</a>
+          <a class="nav-link" href="#">Contacto</a>
         </li>
       </ul>
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
+        <input class="form-control me-2" type="search" placeholder="Buscar...">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
       </form>
     </div>
   </div>
