--- a/angular-front/src/app/components/widget/icon/icon.component.html
+++ b/angular-front/src/app/components/widget/icon/icon.component.html
@@ -3,7 +3,7 @@
  [attr.width]="width" [attr.height]="height" viewBox="0 0 512.000000 512.000000"
  preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
-[attr.fill]="color" stroke="none">
+fill="currentColor" stroke="none">
 
 <path d="M2495 5110 c-174 -35 -345 -163 -490 -367 -84 -118 -194 -336 -255
 -503 -23 -63 -45 -118 -48 -122 -4 -3 -50 2 -102 12 -265 50 -602 53 -780 7
