--- a/angular-front/src/app/constants/colors.styles.scss
+++ b/angular-front/src/app/constants/colors.styles.scss
@@ -1,5 +1,6 @@
 $MAIN_COLOR: #5792CF;
 $SECONDARY_COLOR: #CA7491;
-$DARK_COLOR: #3D4756;
+$DARK_COLOR: 'black';
+$SEMI-DARK_COLOR: #3D4756;
 $NEUTRAL_COLOR: #A1ACBD;
 $LIGHT_COLOR: #FAFAFA
