--- a/angular-front/src/app/constants/colors.styles.scss
+++ b/angular-front/src/app/constants/colors.styles.scss
@@ -3,4 +3,5 @@ $SECONDARY_COLOR: #CA7491;
 $DARK_COLOR: 'black';
 $SEMI-DARK_COLOR: #3D4756;
 $NEUTRAL_COLOR: #A1ACBD;
-$LIGHT_COLOR: #FAFAFA
+$LIGHT_COLOR: #FAFAFA;
+$BACKGROUND_COLOR: 'f5f5f5';
