--- a/angular-front/src/app/components/dashboard/dashboard.component.scss
+++ b/angular-front/src/app/components/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 5% 5% 5% 5%;
+    padding: 3.5% 5% 5% 5%;
     width: 100%; height: 100%;
     overflow-y: auto;
     max-height: 100vh - tb.$toolbar-height;
@@ -22,6 +22,10 @@
         width: 100%;
     }
 
+    #dashboard-title {
+        margin-bottom: 3%;
+        p { padding-top: 0.5%; }
+    }
 }
 
 @media (max-width: 768px) {
