--- a/angular-front/src/app/components/table/table.component.scss
+++ b/angular-front/src/app/components/table/table.component.scss
@@ -3,10 +3,16 @@
 table {
     width: 100%;
     background-color: white;
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.2);
 
     thead {
         //--bs-table-bg: #586994 !important;
         background-color: colors.$NEUTRAL_COLOR;
-        color: colors.$DARK_COLOR;
+        color: colors.$LIGHT_COLOR;
     }
+
+    tbody {
+        --bs-table-bg: colors.$LIGHT_COLOR;
+    }
+
 }
