bootstrap library 5.3.0 installed

--- a/angular-front/src/styles.scss
+++ b/angular-front/src/styles.scss
@@ -4,4 +4,5 @@
 body {
     font-family: fonts.$MAIN_FONT;
     background-color: colors.$BACKGROUND_COLOR;
+    --bs-body-font-family: fonts.$MAIN_FONT;
 }
