--- a/angular-front/src/app/app.component.html
+++ b/angular-front/src/app/app.component.html
@@ -11,4 +11,4 @@
       </main>
     </div>
 </div>
-<app-login [hasAccount]="false" (loggingIn)="logIn()" *ngIf="!loggedIn"></app-login>
+<app-auth [hasAccount]="false" (loggingIn)="logIn()" *ngIf="!loggedIn"></app-auth>
