--- a/angular-front/src/app/constants/fonts.styles.scss
+++ b/angular-front/src/app/constants/fonts.styles.scss
@@ -1,4 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@300&display=swap');
 
-$MAIN_FONT: 'Poppins', sans-serif;
+$MAIN_FONT: Poppins, sans-serif;
