bilateral screen switch (Login/Dashboard)

--- a/angular-front/src/app/components/global/toast/toast.component.html
+++ b/angular-front/src/app/components/global/toast/toast.component.html
@@ -1,5 +1,5 @@
 <div class="toast-container position-static">
-    <div *ngFor="let message of messages; let i = index;" 
+    <div *ngFor="let message of messages" 
         class="toast show" role="alert"
     >
         <div class="toast-header text-bg-danger">
