--- a/angular-front/src/app/components/toolbar/toolbar.component.html
+++ b/angular-front/src/app/components/toolbar/toolbar.component.html
@@ -19,10 +19,9 @@
           <a class="nav-link" href="#">Contacto</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Buscar...">
-        <button class="btn btn-outline-light" type="submit">Buscar</button>
-      </form>
+      <div class="d-flex">
+        <button (click)="logOut()" class="btn btn-outline-light" type="button">Cerrar sesión</button>
+      </div>
     </div>
   </div>
 </nav>
