--- a/angular-front/src/app/pages/auth/auth.component.html
+++ b/angular-front/src/app/pages/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div id="login">
-    <div id="login-left">
+    <aside id="login-left">
         <img src="assets/images/login-left2.png" alt="Login" />
-    </div>
+    </aside>
     <section id="login-right">
         <div id="login-title-description">
             <h1>{{hasAccount? '¡Bienvenido nuevamente!' : '¡Bienvenido a Spanford!'}}</h1>
