filter tree design working

--- a/angular-front/src/app/components/filters/treeFilter/filters.component.scss
+++ b/angular-front/src/app/components/filters/treeFilter/filters.component.scss
@@ -1,4 +1,4 @@
-@use '../../constants/colors.styles' as colors;
+@use '../../../constants/colors.styles' as colors;
 
 #filter-buttons-container {
     background-color: colors.$LIGHT_COLOR;
