--- a/angular-front/src/app/components/table/table.component.scss
+++ b/angular-front/src/app/components/table/table.component.scss
@@ -7,7 +7,7 @@ table {
 
     thead {
         //--bs-table-bg: #586994 !important;
-        background-color: colors.$NEUTRAL_COLOR;
+        background-color: colors.$MAIN_COLOR;
         color: colors.$LIGHT_COLOR;
     }
 
