--- a/angular-front/src/app/components/toolbar/toolbar.component.html
+++ b/angular-front/src/app/components/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <app-icon></app-icon>
-      {{"\<Spanford University />"}}
+      <h1>{{"\<Spanford University />"}}</h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
