--- a/angular-front/src/app/components/table/table.component.html
+++ b/angular-front/src/app/components/table/table.component.html
@@ -5,7 +5,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Apellido</th>
-                <th scope="col">e-mail</th>
+                <th scope="col">E-mail</th>
                 <th scope="col">Carrera</th>
                 <th scope="col">Promedio</th>
             </tr>
