--- a/angular-front/src/app/components/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
             </p>
         </div>
         <div class="mb-5">
-            <app-filters></app-filters>
+            <app-filters (treeEmitter)="onTreeEmitter($event)"></app-filters>
         </div>
-        <app-table></app-table>
+        <app-table [filters]="filters"></app-table>
     </section>
 </div>
