--- a/angular-front/src/app/components/table/table.component.html
+++ b/angular-front/src/app/components/table/table.component.html
@@ -7,16 +7,18 @@
                 <th scope="col">Apellido</th>
                 <th scope="col">E-mail</th>
                 <th scope="col">Carrera</th>
+                <th scope="col">Fecha de ingreso</th>
                 <th scope="col">Promedio</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let student of students; let i = index">
+            <tr *ngFor="let student of students | filter:filters; let i = index">
                 <th scope="row">{{i+1}}</th>
                 <td>{{student.name}}</td>
                 <td>{{student.surname}}</td>
                 <td>{{student.email}}</td>
                 <td>{{student.career}}</td>
+                <td>{{student.admissionDate | date: 'dd/MM/yyyy'}}</td>
                 <ng-container *ngIf="student.averageGrade as grade">
                     <td [appInRangeStyleValue]="grade"
                         [appInRangeStyle]="[
